Changed to be jdk 8 instead of 16