@@ -1,12 +1,10 @@
 package one.xingyi.optics.annotations.processors;
 
-import lombok.EqualsAndHashCode;
-import lombok.Getter;
-import lombok.RequiredArgsConstructor;
-import lombok.ToString;
+import lombok.*;
 import one.xingyi.optics.annotations.serialise.IAnnotationProcessorLoader;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
@@ -39,31 +37,32 @@ class TraversalWithFullDetails {
     protected final String name;
     protected final List<TraversalPathPart> path;
 
-    public PackageAndClass getClassAtEnd(){
-        return path.get(path.size()-1).field.getFieldType();
+    public PackageAndClass getClassAtEnd() {
+        return path.get(path.size() - 1).field.getFieldType();
     }
     static TraversalWithFullDetails from(ClassOpticsDetails recordDetails, TraversalDetails details, IAnnotationProcessorLoader<WithDebug<PackageAndClass>, RecordedTraversals> store, Consumer<String> log) throws IOException {
         var debug = recordDetails.isDebug();
-        var path = details.path();
+        var path = details.path;
         if (path.size() == 0) throw new RuntimeException("No traversals for " + recordDetails.getClassName());
         String first = path.get(0);
         var rest = path.subList(1, path.size());
+        log.accept("record details for " + recordDetails.getClassName() + " are " + recordDetails.getFieldDetails());
         Optional<ViewFieldDetails> firstField = recordDetails.getFieldDetails().stream().filter(fd -> fd.name.equals(first)).findFirst();
-        if (firstField.isEmpty())
+        if (!firstField.isPresent())
             throw new RuntimeException("Could not find field" + first + " in the class " + recordDetails.getCanonicalName());
         var firstPart = new TraversalPathPart(recordDetails.getPackageAndClass(), new NameAndType(firstField.get().name, firstField.get().containedFieldType));
 
-        List<TraversalPathPart> tds = Utils.foldLeft(rest, List.of(firstPart), (acc, v) -> {
+        List<TraversalPathPart> tds = Utils.foldLeft(rest, Collections.singletonList(firstPart), (acc, v) -> {
             var last = acc.get(acc.size() - 1);
             PackageAndClass lastFieldType = last.field.getFieldType();
             RecordedTraversals loaded = store.load(WithDebug.of(lastFieldType, recordDetails.isDebug()));
             if (debug) log.accept("Loaded for path (" + v + ") => " + loaded);
-            var found = loaded.classAndFields().stream().filter(nat -> nat.getFieldName().equals(v)).findFirst();
-            if (found.isEmpty())
+            var found = loaded.classAndFields.stream().filter(nat -> nat.getFieldName().equals(v)).findFirst();
+            if (!found.isPresent())
                 throw new RuntimeException("Could not find " + v + " in " + lastFieldType + " for " + recordDetails.getClassName() + ":" + path);
             return Utils.append(acc, new TraversalPathPart(lastFieldType, found.get()));
         });
-        return new TraversalWithFullDetails(details.name(), tds);
+        return new TraversalWithFullDetails(details.name, tds);
     }
 
 
